# wechat-yoga-miniprogram

./: .gitignore  README.md  big.ai  book.ai  commands.html  index.html  main.cpp  package-lock.json  picture.html  project.config.json  project.private.config.json  script.html
Deploy/: Cargo.toml  README.md
Deploy/src/: main.rs
WebAssembly/admin/: Cargo.toml  README.md
WebAssembly/weixin/: Cargo.toml
WebAssembly/weixin/src/: lib.rs  market.rs
app/: 1.js  db.sql  go.mod  go.sum  main.go
app/assets/: go.mod  go.sum  main.go
app/backend/: card.html  cards.html  course.html  courses.html  custom-actions.js  custom-drawer.js  editor.html  image.html  index.html  index.js  (+20 more)
miniprogram/: 1.js  app.js  app.json  app.wxss  miniprogram.code-workspace  package-lock.json  package.json  request.js  shared.js  sitemap.json  utils.js  测试.md
server/: Cargo.toml  README.md  Rocket.toml  Yoga_y.service
server/src/: main.go  main.rs
server/src/errors/: mod.rs
server/src/handlers/: 1.js  admin_book.md  admin_book.rs  admin_lessons.md  admin_lessons.rs  admin_user.md  admin_user.rs  auth.rs  booking.md  booking.rs  debug.md  debug.rs  favicon.rs  index.md  index.rs  mod.rs  picture.md  picture.rs  schedule.md  schedule.rs  teacher.md  teacher.rs  user.md  user.rs
server/src/models/: mod.rs  settings.rs
server/src/utils/: client_real_addr.rs  content_disposition.rs  cors.rs  data.rs  mod.rs  string.rs
utils/: weixin.js  weixin_bg.wasm
yg/: .gitignore  project.private.config.json  yg.sln
资源/: one.ai  pattern.psd  small.ai  tuantiyuyue.eps  vip.ai  微信小程序二维码.ai
(+776 files in other folders)
